# TACS-Graphs

./: .gitignore  Dockerfile  docker.sh
mprocs/: .KI_mprocs.yaml  .KI_mprocs_compute_odom.yaml  .handheld_old.yaml  .handheld_tts_compute_odom.yaml  .handheld_tts_given_odom.yaml  .keit_new.yaml  .keit_old.yaml  .keit_tts.yaml  .real_new.yaml  .real_old.yaml  .real_tts.yaml  .tiers_new.yaml  .tiers_old.yaml  .tiers_tts.yaml  .virtual_mprocs.yaml  ros1.sh  ros2.sh
s-graph/: .rosinstall_ros2  docker_start.txt  requirements.txt  setup.sh
s-graph/lidar_situational_graphs/: CMakeLists.txt  package.xml
s-graph/lidar_situational_graphs/apps/: fast_gicp.cpp  prefiltering_node.cpp  room_segmentation_node.cpp  room_segmentation_node_old.cpp  s_graphs_node.cpp  s_graphs_node_old.cpp  scan_matching_odometry_node.cpp  subroom_segmentation_node.cpp  subroom_segmentation_node_ritaver.cpp  travel_room_segmentation_node.cpp
s-graph/lidar_situational_graphs/config/: prefiltering.yaml  s_graphs.yaml  s_graphs_old.yaml  scan_matching.yaml
s-graph/lidar_situational_graphs/config/tiers/: prefiltering.yaml  s_graphs.yaml
s-graph/lidar_situational_graphs/include/g2o/: edge_plane_identity.hpp
s-graph/lidar_situational_graphs/include/s_graphs/backend/: complete_room_mapper.hpp  floor_mapper.hpp  graph_slam.hpp  infinite_room_graph_generator.hpp  room_mapper.hpp  room_mapper_old.hpp
s-graph/lidar_situational_graphs/include/s_graphs/common/: complete_rooms.hpp  graph_utils.hpp  infinite_rooms.hpp  plane_utils.hpp  room_utils.hpp  rooms.hpp
s-graph/lidar_situational_graphs/include/s_graphs/frontend/: loop_detector.hpp  subroom_analyzer.hpp  travel_room_analyzer.hpp
s-graph/lidar_situational_graphs/include/s_graphs/visualization/: graph_publisher.hpp  graph_visualizer.hpp
s-graph/lidar_situational_graphs/launch/: ablation_s_graphs_launch.py  complicated_env_launch.py  gicp_launch.py  s_graphs_launch.py  scan_matching_odometry_launch.py  tiers10_launch.py  tiers7_launch.py
s-graph/lidar_situational_graphs/launch/eval/: DCS_HD_eval_launch.py  run_all2.sh  run_all_compute_odom.sh
s-graph/lidar_situational_graphs/launch/eval/keit/: new_false_script.sh  new_true_script.sh  old_false_ros2_script.sh  old_false_script.sh  old_ros1_script.sh  old_true_ros2_script.sh  old_true_script.sh  traversable_false_script.sh  traversable_true_script.sh
s-graph/lidar_situational_graphs/launch/eval/sgraphs_data/: new_true_script.sh  old_true_ros2_script.sh  old_true_script.sh  traversable_true_script.sh
s-graph/lidar_situational_graphs/launch/eval/tiers/: gicp_script_once.sh  gicp_script_twice.sh  hdl_slam.sh  new_script_once.sh  new_script_twice.sh  old_ablation_ros2_script_once.sh  old_ablation_ros2_script_twice.sh  old_ablation_script_once.sh  old_ablation_script_twice.sh  old_ros1_script.sh  old_ros2_script_once.sh  old_ros2_script_twice.sh  old_script_once.sh  old_script_twice.sh  traversable_script_once.sh  traversable_script_twice.sh
s-graph/lidar_situational_graphs/rviz/: s_graphs_ros2.rviz
s-graph/lidar_situational_graphs/src/g2o/: edge_plane.cpp
s-graph/lidar_situational_graphs/src/s_graphs/backend/: complete_room_mapper_dev.cpp  finite_room_mapper.cpp  finite_room_mapper_old.cpp  graph_slam.cpp  infinite_room_graph_generator.cpp  infinite_room_mapper.cpp  infinite_room_mapper_old.cpp  loop_mapper.cpp  plane_mapper.cpp
s-graph/lidar_situational_graphs/src/s_graphs/common/: graph_utils.cpp  information_matrix_calculator.cpp  plane_utils.cpp  room_utils.cpp
s-graph/lidar_situational_graphs/src/s_graphs/eval/: DCS_HD_evel.cpp  accumulated_dist.py  calc_precision_loop.py  loop_keyframes.py
s-graph/lidar_situational_graphs/src/s_graphs/frontend/: plane_analyzer.cpp  room_analyzer.cpp  subroom_analyzer.cpp  travel_room_analyzer.cpp
s-graph/lidar_situational_graphs/src/s_graphs/visualization/: graph_publisher.cpp  graph_visualizer.cpp
s-graph/lidar_situational_graphs/test/: testRoom.cpp  testRoomCentreCompute.cpp
s-graph/utils/msgs/situational_graphs_msgs/: CMakeLists.txt
s-graph/utils/msgs/situational_graphs_msgs/msg/: CompleteRoomData.msg  CompleteRoomsData.msg  PlaneData.msg  PlanesData.msg
s-graph/utils/ndt_omp/: CMakeLists.txt
s-graph/utils/reasoning/situational_graphs_reasoning/: setup.py
tiers_ws/src/global_planner_ros2/: CMakeLists.txt  package.xml
tiers_ws/src/global_planner_ros2/launch/: demo.rviz  gpp.launch.py  runPathPlan.launch.xml
tiers_ws/src/global_planner_ros2/src/: gpp_node.cpp
tiers_ws/src/global_planner_ros2/src/gpp/: pathplan.cpp  pathplan.h
tiers_ws/src/global_planner_ros2/src/gpp/planner/: Astarpp.cpp  Astarpp.h  ShortestPP.cpp  ShortestPP.h  Struct.h  aStarLibrary.cpp  aStarLibrary.h  gridlinetraversal.h
tiers_ws/src/global_planner_ros2/src/gpp/reverse_ver(original)/: pathplan copy.cpp  pathplan copy.h
tiers_ws/src/map_publisher/: package.xml  setup.py
tiers_ws/src/map_publisher/map_publisher/: cropped_pgm.py  map_publisher_node.py  maze.pgm  maze.yaml  pcd2pgm.py  png_rect_pgm.py
tiers_ws/src/tiers/: CMakeLists.txt  package.xml
tiers_ws/src/tiers/src/: lidar_calibrate.cpp  lidar_calibrate_2laps.cpp
(+19 files in other folders)
