<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpp</name>
  <version>0.0.1</version>
  <description>The sa_slam package</description>
  <maintainer email="sswan55@kaist.ac.kr">add-nuc-gpu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rcpputils</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>cv_bridge</depend> -->
  <depend>laser_geometry</depend>
  <depend>image_geometry</depend>
  
  <depend>mgs04_base_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
